# ubuntu2004_sp7vm

pico_test/pico-test/blink/: CMakeLists.txt  pico_c.c
pico_test/pico-test/micro_ros/: CMakeLists.txt  pico_micro_ros_example.c
ws_2202/src/bm_controller_tf_pkg_g00/: package.xml  setup.cfg  setup.py
ws_2202/src/bm_controller_tf_pkg_g00/bm_controller_tf_pkg_g00/: bm_controller_tf2odom_g00.py
ws_2202/src/docs/: 20220729_LabRI_P1_IntroNodeROS2.html  20220812_LabRI_Launch.html  20220812_LabRI_Model3D_ROS.html
ws_2202/src/launch_pkg_g00/: package.xml  setup.cfg  setup.py
ws_2202/src/launch_pkg_g00/launch/: talker_listener.launch.py
ws_2202/src/mc_tf2_pkg_g00/: package.xml  setup.cfg  setup.py
ws_2202/src/mc_tf2_pkg_g00/mc_tf2_pkg_g00/: twist2odom_g00.py
ws_2202/src/mc_tf2_pkg_g99/: package.xml  setup.cfg  setup.py
ws_2202/src/mc_tf2_pkg_g99/launch/: disk_g99.launch.py
ws_2202/src/mc_tf2_pkg_g99/mc_tf2_pkg_g99/: twist2odom_g99.py
ws_2202/src/mc_tf2_pkg_g99/models/: disk_g99.urdf.xacro
ws_2202/src/modelrobot_pkg_g00/: package.xml  setup.cfg  setup.py
ws_2202/src/modelrobot_pkg_g00/launch/: robot_launch_g00.launch.py
ws_2202/src/modelrobot_pkg_g00/model/: rviz_config.rviz  (+1 more)
ws_2202/src/modelrobot_pkg_g99/: package.xml  setup.cfg  setup.py
ws_2202/src/temp/: 20220812_LabRI_Launch.html  20220812_LabRI_Model3D_ROS.html
ws_2202/src/temp2/: oop_node.py
ws_2202/src/turtle_move_pkg_g00/: package.xml  setup.cfg  setup.py
ws_2202/src/turtle_move_pkg_g99/: package.xml  setup.cfg  setup.py
ws_2202/src/turtle_twins_pkg/: package.xml  setup.cfg  setup.py
(+7 files in other folders)
